# lfs-course

./: README.md
2011619_liyue/: README.md
2013581-niexin/: README.md
2021201564-wanghening/: README.md
2021201695-songzhinan/: README.md
2021201699-liukemeng/: .README.md.swp  README.md
2021201750-zhukailang/: README.md
2021201763-liulan/: README.md
2111204-JiaZhen/: README.md
2111334-liuzonghuan/: README.md
2112192-zhenweilin/: .README.md.swp
3120005155-liaohao/: README.md
BESTI/2022/: readme.md
BIT/2023/: README.md
BUAA/: README.md
BUAA/2022/: readme.md
CUMT/: README.md
GUT/: readme.md
GUT/2022/: readme.md
GUT/2023/: readme.md
HUST/2023/: readme.md
JLU/: readme.md
JLU/2022/: readme.md
NBU/: readme.md
NBU/2022/: readme.md
NKU/: readme.md
NKU/2013216-zhujingyu/: touch
NKU/2022/: readme.md  高敏莉2014542
NKU/2111660-侯宝曈/: README.md
PKU/: README.md
RUC/: readme.md
RUC/2023/: readme.md
WIT/2022/: readme.md
colleges/BESTI/: readme.md
colleges/PKU/2022-OS-Course/OS-Build-Homework/张丹妮-2101210490/image-build/: README.md  setup.cfg
colleges/PKU/2022-OS-Course/OS-Build-Homework/张丹妮-2101210490/image-build/etc/: openEuler-minimal.json
colleges/ZZU/: readme.md
lfs-7.7-systemd/documents/: 00 教学大纲.doc  01 课前准备.docx  02 openEuler创新实践课课程表.xlsx  LFS-manifesto.md  LFS-on-openEuler_Course-Handout_v1.3.pptx  LFS-on-openEuler_Lab-Guidebook_v1.3.1.docx  LFS-on-openEuler_Lab-Guidebook_v1.3.docx  LFS-on-openEuler_Lecture-Handout_v1.3.1.pptx  LFS-on-openEuler_Lecture-Handout_v1.3.pptx  LFS宣言.docx  (+12 more)
zhoucheng-2021201576/: Readme.md
(+130 files in other folders)
