[metadata]
name = omniimager
version = 0.4.2
summary = Image Build Service of the Omni Build Platform
description_file =
    README.md
author = Zhenyu Zheng
author_email = zheng.zhenyu@outlook.com
python_requires = >=3.8
url = https://github.com/omnibuildplatform/omni-imager
classifiers =
    Development Status :: 3 - Alpha
    Environment :: OmniBuildPlatform
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
data_files =
    etc/omni-imager = etc/*

packages =
    omniimager

[entry_points]
console_scripts =
    omni-imager = omniimager.cli:main
